--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap-icons": "^1.11.5",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-multi-carousel": "^2.8.5",
     "react-on-screen": "^2.1.1",
